--- a/public/html/sign_up.html
+++ b/public/html/sign_up.html
@@ -16,24 +16,24 @@
                 <div class="card mt-5">
                     <div class="card-body">
                         <h2 class="card-title text-center">สมัครสมาชิก</h2>
-                        <form id="signupForm">
+                        <form id="signupForm" method="post" action="/register">
                             <div class="form-group">
                                 <label for="username">ชื่อผู้ใช้</label>
-                                <input type="text" class="form-control" id="username" placeholder="กรุณากรอกชื่อผู้ใช้">
+                                <input type="text" class="form-control" id="username" placeholder="กรุณากรอกชื่อผู้ใช้" name="username">
                             </div>
                             <div class="form-group">
                                 <label for="email">อีเมล</label>
-                                <input type="email" class="form-control" id="email" placeholder="กรุณากรอกอีเมล">
+                                <input type="email" class="form-control" id="email" placeholder="กรุณากรอกอีเมล" name="email">
                             </div>
                             <div class="form-group">
                                 <label for="password">รหัสผ่าน</label>
-                                <input type="password" class="form-control" id="password" placeholder="กรุณากรอกรหัสผ่าน">
+                                <input type="password" class="form-control" id="password" placeholder="กรุณากรอกรหัสผ่าน" name="password">
                             </div>
                             <div class="form-group">
                                 <label for="confirmPassword">ยืนยันรหัสผ่าน</label>
-                                <input type="password" class="form-control" id="confirmPassword" placeholder="กรุณายืนยันรหัสผ่าน">
+                                <input type="password" class="form-control" id="confirmPassword" placeholder="กรุณายืนยันรหัสผ่าน" name="confirmPassword">
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block mx-auto">สมัครสมาชิก</button>
+                            <button class="btn btn-primary btn-block mx-auto" type="submit">yayyyyy</button>
                         </form>
                         <p class="text-center mt-3">มีบัญชีอยู่แล้ว? <a href="/login">เข้าสู่ระบบ</a></p>
                     </div>
